storing jenkinsfile and updating testng.xml